--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 Flask==0.10.1
+Flask-Migrate==1.4.0
 Flask-SQLAlchemy==2.0
+Flask-Script==2.0.5
 Jinja2==2.8
+Mako==1.0.1
 MarkupSafe==0.23
 SQLAlchemy==1.0.6
 Werkzeug==0.10.4
+alembic==0.7.6
+flake8==2.4.1
 itsdangerous==0.24
+mccabe==0.3.1
+pep8==1.5.7
+pyflakes==0.8.1
