--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.10.1
+Flask-Bootstrap==3.3.5.6
 Flask-Migrate==1.4.0
 Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
@@ -10,6 +11,7 @@ SQLAlchemy==1.0.6
 WTForms==2.0.2
 Werkzeug==0.10.4
 alembic==0.7.6
+dominate==2.1.12
 flake8==2.4.1
 itsdangerous==0.24
 mccabe==0.3.1
